# event-driven-trading-stack

./: README.md  example.yaml  pyproject.toml
.github/workflows/: ci.yaml
edts/: cli.py  common.py  protocols.py  pubsub.py  trader.py
edts/generators/: base.py  random_walk.py
edts/strategies/: base.py  mean_reversion.py
tests/: conftest.py  test_basic_pubsub.py  test_full_stack.py  test_generator.py
