[project]
name = "edts"
version = "0.1.0"
description = "A lightweight demo of an event-driven trading stack."
requires-python = "==3.13.*"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "requests>=2.32",
]

[project.scripts]
stack = "edts.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
